# ELIT21_core

./: CMakeLists.txt  README.md  TREE.md
config/: ELIT21.conf  seeds.json
doc/: ARCHITECTURE.md  BITCOIN_CORE_PARITY.md
scripts/: generate_bitcoin_like_layout.sh
src/: ELIT21d.cpp  addrman.cpp  addrman.h  amount.cpp  amount.h  banman.cpp  banman.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  checkpoint.cpp  checkpoint.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  deploymentstatus.cpp  deploymentstatus.h  init.cpp  init.h  logging.cpp  logging.h  net.cpp  net.h  net_permissions.cpp  net_permissions.h  net_processing.cpp  net_processing.h  pow.cpp  pow.h  protocol.cpp  protocol.h  txdb.cpp  txdb.h  txmempool.cpp  txmempool.h  validation.cpp  (+5 more)
src/common/: args.cpp  args.h  configfile.cpp  configfile.h  init.cpp  init.h  messages.cpp  messages.h  settings.cpp  settings.h  url.cpp  url.h
src/consensus/: merkle.cpp  merkle.h  params.cpp  params.h
src/crypto/: hash.cpp  hash.h
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h
src/interfaces/: chain.h  node.cpp  node.h
src/kernel/: chainstate.cpp  chainstate.h  context.cpp  context.h
src/node/: addrdb.cpp  addrdb.h  blockmanager.cpp  blockmanager.h  blockmanager_args.cpp  blockmanager_args.h  blockmanager_opts.cpp  blockmanager_opts.h  blockstorage.cpp  blockstorage.h  caches.cpp  caches.h  chainman.cpp  chainman.h  chainstate.cpp  chainstate.h  connection_types.h  context.cpp  context.h  database_args.cpp  database_args.h  eviction.cpp  eviction.h  interface_ui.cpp  interface_ui.h  kernel_notifications.cpp  kernel_notifications.h  mempool.cpp  mempool.h  mempool_args.cpp  mempool_args.h  node.cpp  node.h  peerman.cpp  peerman.h  txorphanage.cpp  txorphanage.h  txreconciliation.cpp  txreconciliation.h  types.cpp  (+5 more)
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.h
src/rpc/: blockchain.cpp  blockchain.h  blockchain_util.cpp  blockchain_util.h  client.cpp  client.h  mempool.cpp  mempool.h  mining.cpp  mining.h  net.cpp  net.h  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction.h  register.cpp  register.h  request.cpp  request.h  server.cpp  server.h  server_util.cpp  server_util.h  util.cpp  util.h
src/util/: strencodings.cpp  strencodings.h  system.cpp  system.h  time.cpp  time.h
src/validation/: block_validator.cpp  block_validator.h  tx_validator.cpp  tx_validator.h  validation.cpp  validation.h
src/wallet/: wallet.cpp  wallet.h
test/sanity/: smoke_architecture.sh
test/unit/: args_tests.cpp  bitcoin_additional_parity_modules_tests.cpp  bitcoin_future_parity_modules_tests.cpp  bitcoin_latest_parity_modules_tests.cpp  bitcoin_layout_tests.cpp  bitcoin_new_modules_tests.cpp  bitcoin_next_parity_modules_tests.cpp  bitcoin_parity_modules_tests.cpp  bitcoin_runtime_modules_tests.cpp  bitcoin_source_parity_layout_tests.cpp  chain_tests.cpp  chainman_tests.cpp  chainparams_tests.cpp  mempool_policy_tests.cpp  merkle_pow_tests.cpp  network_stack_tests.cpp  node_validation_tests.cpp  protocol_tests.cpp  validationinterface_tests.cpp
